--- a/indexdemo.html
+++ b/indexdemo.html
@@ -42,40 +42,39 @@
 			<div class="overlay">
 				<header>
 							<!--Navigation bar-->
-						
-							<nav class="navbar navbar-expand-lg navbar-dark navbar-trans menubar">
-<a class="navbar-brand" href="#"><img src="images/newlogo.png"></a>
-  <a class="navbar-brand" href="#"><h1>Uddeshya</h1></a>
-  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+					<nav class="navbar navbar-expand-lg navbar-dark navbar-trans menubar">
+						  <a class="navbar-brand" href="#"><img src="images/newlogo.png"><br><h1>Uddeshya</h1></a>
+						  
+						  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+						    <span class="navbar-toggler-icon"></span>
+						  </button>
 
-  <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo02">
-    <ul class="navbar-nav  mt-2 mt-lg-0">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="">About Us</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="">Events</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="">Chapters</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="">Training</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link"href="">Internship</a>
-      </li>
-       <li class="nav-item">
-        <a class="nav-link" href="">Contact Us</a>
-      </li>
-       </ul>
-       </div>
-       </nav>
+					  <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo02">
+					    <ul class="navbar-nav  mt-2 mt-lg-0">
+					      <li class="nav-item active">
+					        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+					      </li>
+					      <li class="nav-item">
+					        <a class="nav-link" href="">About Us</a>
+					      </li>
+					      <li class="nav-item">
+					        <a class="nav-link" href="">Events</a>
+					      </li>
+					      <li class="nav-item">
+					        <a class="nav-link" href="">Chapters</a>
+					      </li>
+					      <li class="nav-item">
+					        <a class="nav-link" href="">Training</a>
+					      </li>
+					      <li class="nav-item">
+					        <a class="nav-link"href="">Internship</a>
+					      </li>
+					       <li class="nav-item">
+					        <a class="nav-link" href="">Contact Us</a>
+					      </li>
+					       </ul>
+       					</div>
+       				</nav>
    
        <!-- navbar ends -->
 
